# batch-tracker

./: .gitignore  Cargo.toml  Dockerfile.grafql  Dockerfile.grql  Dockerfile.indexer  docker-compose.yaml
graphql/: .env.example  Cargo.toml
graphql/data/: data.db
graphql/src/: filter_batches.rs  get_accounting_list.rs  main.rs  models.rs  schema.rs
graphql/src/models/: accounting.rs  batch.rs  mod.rs  status.rs
indexer/: .env.example  Cargo.toml
indexer/abi/: ITaikoInbox.json
indexer/data/: data.db
indexer/src/: batch_indexer.rs  config.rs  db.rs  main.rs  taiko_inbox_binding.rs
