[package]
name = "batch-tracker-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true